[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/SelectLevel.gd" type="Script" id=2]
[ext_resource path="res://styles/font_small_title.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[node name="CenterContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 20
custom_constants/margin_left = 80
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 20.0
margin_right = 1286.0
margin_bottom = 748.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 1206.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Levels"
align = 1

[node name="AuthorLabel" type="Label" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1206.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Author: lala"
align = 1

[node name="LevelsContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 1206.0
margin_bottom = 126.0
custom_constants/margin_top = 50

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/LevelsContainer"]
margin_top = 50.0
margin_right = 1206.0
margin_bottom = 50.0
custom_constants/vseparation = 11
custom_constants/hseparation = 11
columns = 17
__meta__ = {
"_edit_use_anchors_": false
}
